--- a/screens/src/components/userDashboard/Userdashboard.css
+++ b/screens/src/components/userDashboard/Userdashboard.css
@@ -203,7 +203,7 @@ body, html {
   border-radius: 10px;
   color: white;
   display: flex;
-  flex-direction: column; /* Make it a column layout overall */
+  flex-direction: column; 
   gap: 0.75rem;
   margin-top: 1rem;
 }
